<resources>
    <string name="app_name">True Parents</string>
    <string name="app_start_name">TRUE LIFE</string>
    <string name="advert">Advertising</string>
    <string name="konkurs">Brothers and sisters, I think the reading is simple, but your lived experience, how prayer works in your life, or how prayer once helped, is extremely interesting and encouraging to others. If you write me your experience by mail, I will be happy to publish it (translation through translate to other languages)</string>
    <string name="info_text">Hello! I\'m :Woojin - the developer of app "TRUE LIFE — live your faith every day". 😊
\n\nThe True Parents will always remain on the main screen to remind us of the center of our faith and life.
\n\nThe goal of the app is to become a daily helper for every Cheon Il Guk owner.
\n\nNA new coin has been introduced — the 심정 (심정 Coin - Simjeong Coin - SC). You can earn coins by completing tasks. Feel free to explore.
\n\nIn the future, I plan to add even more useful features.
\n\nIf you have any ideas or suggestions, please feel free to write to me. Your thoughts are very important, and I will gladly take them into consideration.
    \n\nI work on this app by myself, so not everything moves quickly. If you\'d like to support and inspire me, you can tap the ☕ button below 😉</string>
    <string name="site">Site</string>
    <string name="about">Settings</string>
    <string name="experiences_prayer">Prayer in my life</string>
    <string name="share_by">Share:</string>
    <string name="share_body">I want to share "TRUE LIFE" application.\n</string>
    <string name="empty_list">Empty list</string>
    <string name="author"><i>\"Learn to master yourself before you master the Universe\"</i></string>
    <string name="email">E-mail: gms.nppn@gmail.com</string>
    <string name="explanation">Value of prayer</string>
    <string name="holy_days">Holy Days</string>
    <string name="title_major_holidays">8 Major Holidays</string>
    <string name="title_important_events">Important Events</string>
    <string name="day_of_celebrate">Day of celebration (D/M/Y):</string>
    <string name="heavenly_calendar">Heavenly Calendar</string>
    <string name="gregorian_calendar">Gregorian Calendar</string>
    <string name="loading_mp3">Wait a moment while loading the mp3</string>
    <string name="kido_counter">Prayer %s</string>
    <string name="facebook">Facebook</string>
    <string name="youtube_video_id">6_QzQ5KRDw8</string>
    <string name="yes">Так</string>
    <string name="no">Ні</string>
    <string name="privacy_policy"><a href="https://drive.google.com/file/d/1mS3vjhdWB4gV23UGREKpstizmCEGNsPA/view?usp=sharing">Privacy policy</a></string>
    <string name="site_link">https://sites.google.com/view/tfprayer/main-en</string>
    <string name="site_8books_link">https://8books.net/</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="rate">Rate "TRUE LIFE"</string>
    <string name="later_rate">Remind me later</string>
    <string name="no_rate">No, thanks</string>
    <string name="to_rate">Take a moment to rate the "TRUE LIFE" app. Get the 5 심정 Coins award!</string>
    <string name="thanks_for_rate">Thank you for your rating! ⭐⭐⭐⭐⭐ Get %s 심정 Coins reward.</string>
    <string name="ad_remove_month">Remove ads\nfor 1 month</string>
    <string name="ad_cost_month">90 SC</string>
    <string name="ad_remove_forever">Remove ads\nforever</string>
    <string name="ad_cost_forever">210 SC</string>
    <string name="ad_already_hidden">Ads are already hidden</string>
    <string name="ad_hidden_month">Ads hidden for 30 days ✓</string>
    <string name="ad_hidden_forever">Ads hidden forever ✓</string>
    <string name="ad_status_forever">🚫 Ads are hidden forever</string>
    <string name="ad_status_days">🪫 Ads are hidden for %1$d more days</string>
    <string name="add_new_person">Add new person</string>
    <string name="add_person">Add person</string>
    <string name="edit_person">Edit person</string>
    <string name="cancel">Cancel</string>
    <string name="task_cancelled">Task canceled</string>
    <string name="something_wrong">Not write. Check your enter data</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="select_photo">Select photo</string>
    <string name="upload_img_description">Upload person photo</string>
    <string name="add_new_condition">Add new condition</string>
    <string name="add_condition">Add condition</string>
    <string name="edit_condition">Edit condition</string>
    <string name="clear_storage_app">Technical issue</string>
    <string name="clear_storage_app_button">Clear storage</string>
    <string name="technical_message">If you have problems loading the list, please go to <b>app settings -> Storage and cache -> Clear storage</b>.
        \n\nThis will delete the old database.
        \n\nI apologize for this inconvenience.
        \n\nThe list will need to be created in a new way, but it will already contain a photo.</string>
    <string name="start_from">Start from:</string>
    <string name="up_app_title">A new version of the application has been released. You can update on the Play Market page</string>
    <string name="update">Update "TRUE LIFE"</string>
    <string name="later_update">@string/later_rate</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Restart</string>
    <string name="min_3">It`s been 3 minutes</string>
    <string name="min_7">It`s been 7 minutes</string>
    <string name="min_12">It`s been 12 minutes</string>
    <string name="min_21">It`s been 21 minutes</string>
    <string name="min_40">It`s been 40 minutes</string>
    <string name="home_page">Main</string>
    <string name="tp_photo">True Parents</string>
    <string name="tp_kido">Prayers of Father</string>
    <string name="tp_mKido">Prayers of True Father</string>
    <string name="mense">Family Pledge</string>
    <string name="traditions">Traditions</string>
    <string name="site_8books">8 Books</string>
    <string name="h_calendar">Heavenly Calendar</string>
    <string name="uasj_app">UA Shimjeong</string>
    <string name="kido_list">Prayer list</string>
    <string name="communicate">Contact</string>
    <string name="share">Share</string>
    <string name="send">Write to the author</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="calendar_toolbar">Calendar of CIG</string>
    <string name="h_calendar_prev">Heavenly date:</string>
    <string name="h_important_prev">Important date:</string>
    <string name="eu_consent_text">Dear user!\n\nWe use the Play Console to publish the app and collect information about user interaction with the app. In accordance with the new European Data Protection Regulation (GDPR), we need your consent to collect information.</string>
    <string name="eu_consent_question">Read the terms of use of your data and check the box to agree with them.</string>
    <string name="learn_more"><a href="https://drive.google.com/file/d/1kkNl-DxcwSJC_99Ux2qXFd_5fiUR6DCV/view?usp=sharing">Learn <b>Privacy Policy</b> how your <b>Data is Used</b></a></string>
    <string name="agree">I agree with privacy policy</string>
    <string name="let_continue">Continue</string>
    <string name="one"><b>1.</b> Our family, the owner of Cheon Il Guk, pledges to seek our original homeland and build the Kingdom of God on earth and in heaven, the original ideal of creation, by centering on true love.</string>
    <string name="two"><b>2.</b> Our family, the owner of Cheon Il Guk, pledges to represent and become central to heaven and earth by attending the Heavenly Parent and True Parents; we pledge to perfect the dutiful family way of filial sons and daughters in our family, patriots in our nation, saints in the world, and divine sons and daughters in heaven and on earth, by centering on true love.</string>
    <string name="three"><b>3.</b> Our family, the owner of Cheon Il Guk, pledges to perfect the Four Great Realms of Heart, the Three Great Kingships and the Realm of the Royal Family, by centering on true love.</string>
    <string name="four"><b>4.</b> Our family, the owner of Cheon Il Guk, pledges to build the universal family encompassing heaven and earth, which is the Heavenly Parent\'s ideal of creation, and perfect the world of freedom, peace, unity and happiness, by centering on true love.</string>
    <string name="five"><b>5.</b> Our family, the owner of Cheon Il Guk, pledges to strive every day to advance the unification of the spirit world and the physical world as subject and object partners, by centering on true love.</string>
    <string name="six"><b>6.</b> Our family, the owner of Cheon Il Guk, pledges to become a family that moves heavenly fortune by embodying the Heavenly Parent and True Parents, and to perfect a family that conveys Heaven\'s blessing to our community, by centering on true love.</string>
    <string name="seven"><b>7.</b> Our family, the owner of Cheon Il Guk, pledges, through living for the sake of others, to perfect the world based on the culture of heart, which is rooted in the original lineage, by centering on true love.</string>
    <string name="eight"><b>8.</b> Our family, the owner of Cheon Il Guk, pledges, having entered the Era of Cheon Il Guk, to achieve the ideal of God and human beings united in love through absolute faith, absolute love and absolute obedience, and to perfect the realm of liberation and complete freedom in the Kingdom of God on earth and in heaven, by centering on true love.</string>
    <string name="deviz_toolbar">Девізи</string>
    <string name="deviz_vertical"><b>Вертикальний</b></string>
    <string name="deviz_vertical_desc_ko">창조주 하늘부모님을 실체로 모시고 사는 천일국 14년 전 세계 축복가정들은 참부모와 하나된 선민으로서 책임을 다하는 천일국의 참자녀가 되자!</string>
    <string name="deviz_vertical_desc_ko_ua">Чан(г)-джо-джу Ха-ниль-Пу-мо-нім-иль шіль-чє-ро мо-ші-ґо са-нин Чон-іль-ґук шіп-са-ньон чон се-ґє чук-пок-ка-джон(г)-ди-рин чам-пу-мо-(у)а ха-на-т(у)ен сон-мін-и-ро-со чє-ґім-иль та-ха-нин чон-іль-ґу-ґе чам-джа-ньо-ґа т(у)е-джа!</string>
    <string name="deviz_vertical_desc">«Благословенні сім’ї всього світу, які живуть у субстанційному служінні Небесному Батькові-Творцю! У 14-й рік Чонільґук станьмо істинними дітьми Чонільґук, які повністю виконують відповідальність обраного народу, єдиного з Істинними Батьками»</string>
    <string name="deviz_horizontal"><b>Горизонтальний</b></string>
    <string name="deviz_horizontal_desc_ko">우주주관 바라기 전에 자아를 주관하라</string>
    <string name="deviz_horizontal_desc">«Перш, ніж прагнути володіти над Всесвітом, навчись володіти собою»</string>
    <string name="day1_title">Anniversary of True Parents\' Holy Wedding\nHeavenly Parent\'s Day\nTrue Parents\' Day</string>
    <string name="day2_title">Day of All True Things</string>
    <string name="day3_title">Chil Il Jeol (7.1 Jeol)</string>
    <string name="day4_title">Chil Pal Cheol (7.8. Jeol)</string>
    <string name="day5_title">True Children\'s Day</string>
    <string name="day6_title">Foundation Day for the Nation of Heaven and Earth</string>
    <string name="day7_title">Beginning of year of CIG</string>
    <string name="day8_title">True Parents\' Birthday</string>
    <string name="day9_title">Foundation Day / Coronation Ceremony for the Kingship of God</string>
    <string name="day10_title">Anniversary of the Founding of the Unification Church</string>
    <string name="day11_title">Entrance into Cheon Jeong Gung and the Coronation of the King and Queen of Peace</string>
    <string name="day12_title">Ascension of the True Parent of Heaven, Earth and Humankind</string>
</resources>