<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:padding="0dp"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp">

        <TextView
            style="@style/Toolbar.TitleText"
            android:text="@string/deviz_toolbar" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/parent_margin"
            android:layout_marginEnd="@dimen/parent_margin"
            android:orientation="vertical">

            <TextView
                style="@style/TextStyle_Body2_Primary_Dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/parent_margin"
                android:layout_marginBottom="@dimen/margin8"
                android:gravity="center_horizontal"
                android:text="@string/deviz_vertical"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                style="@style/Kajon_mense"
                android:text="@string/deviz_vertical_desc_ko" />

            <TextView
                style="@style/Kajon_mense"
                android:text="@string/deviz_vertical_desc_ko_ua"
                android:textStyle="italic" />

            <TextView
                style="@style/Kajon_mense"
                android:text="@string/deviz_vertical_desc"
                android:textStyle="italic" />

            <TextView
                style="@style/TextStyle_Body2_Primary_Dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/parent_margin"
                android:layout_marginBottom="@dimen/margin8"
                android:gravity="center_horizontal"
                android:text="@string/deviz_horizontal"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                style="@style/Kajon_mense"
                android:text="@string/deviz_horizontal_desc_ko" />

            <TextView
                style="@style/Kajon_mense"
                android:text="@string/deviz_horizontal_desc"
                android:textStyle="italic" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>