<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/day1"
            style="@style/TextStyle_Body2_Primary_Dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/parent_margin"
            android:ellipsize="end"
            android:hint="@string/day1_title"
            android:inputType="phone"
            android:maxLines="1" />

        <EditText
            android:id="@+id/day2"
            style="@style/TextStyle_Body2_Primary_Dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/parent_margin"
            android:ellipsize="end"
            android:hint="@string/day2_title"
            android:inputType="phone"
            android:maxLines="1" />

        <EditText
            android:id="@+id/day3"
            style="@style/TextStyle_Body2_Primary_Dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/parent_margin"
            android:ellipsize="end"
            android:hint="@string/day3_title"
            android:inputType="phone"
            android:maxLines="1" />

        <EditText
            android:id="@+id/day4"
            style="@style/TextStyle_Body2_Primary_Dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/parent_margin"
            android:ellipsize="end"
            android:hint="@string/day4_title"
            android:inputType="phone"
            android:maxLines="1" />

        <EditText
            android:id="@+id/day5"
            style="@style/TextStyle_Body2_Primary_Dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/parent_margin"
            android:ellipsize="end"
            android:hint="@string/day5_title"
            android:inputType="phone"
            android:maxLines="1" />

        <EditText
            android:id="@+id/day6"
            style="@style/TextStyle_Body2_Primary_Dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/parent_margin"
            android:ellipsize="end"
            android:hint="@string/day6_title"
            android:inputType="phone"
            android:maxLines="1" />

        <EditText
            android:id="@+id/day7"
            style="@style/TextStyle_Body2_Primary_Dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/parent_margin"
            android:ellipsize="end"
            android:hint="@string/day7_title"
            android:inputType="phone"
            android:maxLines="1" />

        <EditText
            android:id="@+id/day8"
            style="@style/TextStyle_Body2_Primary_Dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/parent_margin"
            android:ellipsize="end"
            android:hint="@string/day8_title"
            android:inputType="phone"
            android:maxLines="1" />

        <EditText
            android:id="@+id/day9"
            style="@style/TextStyle_Body2_Primary_Dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/parent_margin"
            android:ellipsize="end"
            android:hint="@string/day9_title"
            android:inputType="phone"
            android:maxLines="1" />

        <EditText
            android:id="@+id/day10"
            style="@style/TextStyle_Body2_Primary_Dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/parent_margin"
            android:ellipsize="end"
            android:hint="@string/day10_title"
            android:inputType="phone"
            android:maxLines="1" />

        <EditText
            android:id="@+id/day11"
            style="@style/TextStyle_Body2_Primary_Dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/parent_margin"
            android:ellipsize="end"
            android:hint="@string/day11_title"
            android:inputType="phone"
            android:maxLines="1" />

        <EditText
            android:id="@+id/day12"
            style="@style/TextStyle_Body2_Primary_Dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/parent_margin"
            android:ellipsize="end"
            android:hint="@string/day12_title"
            android:inputType="phone"
            android:maxLines="1" />

    </LinearLayout>
</ScrollView>