<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:padding="0dp"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp">

        <TextView
            style="@style/Toolbar.TitleText"
            android:text="@string/calendar_toolbar" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/HCalendar"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/h_calendar"
                android:textSize="26sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/prev_month"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_prev" />

                <TextView
                    android:id="@+id/title_month_year"
                    style="@style/HCalendar"
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="February 2025" />

                <ImageView
                    android:id="@+id/next_month"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_next" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:orientation="horizontal">

                <TextView
                    style="@style/DayHeader"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/sun" />

                <TextView
                    style="@style/DayHeader"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/mon" />

                <TextView
                    style="@style/DayHeader"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/tue" />

                <TextView
                    style="@style/DayHeader"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/wed" />

                <TextView
                    style="@style/DayHeader"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/thu" />

                <TextView
                    style="@style/DayHeader"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/fri" />

                <TextView
                    style="@style/DayHeader"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/sat" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewCalendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="48dp"
                android:overScrollMode="never"
                android:scrollbars="none"
                tools:listitem="@layout/item_calendar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/h_calendar_prev"
                android:textColor="@color/calendar_prev_day"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/view_heavenly_date_today"
                style="@style/HCalendar"
                android:layout_width="match_parent"
                android:layout_marginBottom="24dp"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="오늘 천일국 13년 1월 9일" />

            <TextView
                android:id="@+id/important_day_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/h_important_prev"
                android:textColor="@color/important_day_border"
                android:textSize="16sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/view_important_day"
                style="@style/HCalendar"
                android:layout_width="match_parent"
                android:layout_marginBottom="24dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone"
                tools:text="오늘 천일국 13년 1월 9일"
                tools:visibility="visible" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>