<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin8"
        android:background="@color/white">

        <ImageView
            android:id="@+id/upload_img_person"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/upload_img_description"
            android:src="@drawable/ic_person" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_select_photo"
            style="@style/ButtonSelectPhoto"
            android:layout_toEndOf="@+id/upload_img_person"
            android:text="@string/select_photo"
            app:cornerRadius="4dp"
            app:iconGravity="start"
            app:iconPadding="12dp"
            app:iconTint="@android:color/white" />

        <EditText
            android:id="@+id/create_person_name"
            style="@style/BaseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/upload_img_person"
            android:layout_marginStart="@dimen/edge_margins"
            android:layout_marginEnd="@dimen/edge_margins"
            android:layout_marginBottom="@dimen/margin8"
            android:ellipsize="end"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textColorHint="@color/text_color_hint" />

        <EditText
            android:id="@+id/create_person_description"
            style="@style/BaseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/create_person_name"
            android:layout_marginStart="@dimen/edge_margins"
            android:layout_marginEnd="@dimen/edge_margins"
            android:layout_marginBottom="@dimen/margin8"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:textColorHint="@color/text_color_hint" />

        <View
            style="@style/AppTheme.HorizontalViewDivider"
            android:layout_below="@+id/create_person_description" />
    </RelativeLayout>
</LinearLayout>